[gd_scene load_steps=8 format=2]

[ext_resource path="res://ButtonsAndArt/background-small-size/sk4.png" type="Texture" id=1]
[ext_resource path="res://Sounds/LoopingTrack use for main menu and settings.ogg" type="AudioStream" id=2]
[ext_resource path="res://Sounds/Menu_Selection_Click.wav" type="AudioStream" id=3]
[ext_resource path="res://LevelSelection/level images/level2_image.png" type="Texture" id=4]
[ext_resource path="res://LevelSelection/level images/level1_image.png" type="Texture" id=5]
[ext_resource path="res://LevelSelection/level_selection.gd" type="Script" id=6]
[ext_resource path="res://LevelSelection/cutscene-v2.1.ogv" type="VideoStream" id=7]

[node name="level_selection" type="Node2D"]
script = ExtResource( 6 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1020.0
margin_bottom = 600.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="level1" type="TextureButton" parent="TextureRect"]
margin_left = 83.0
margin_top = 188.0
margin_right = 443.0
margin_bottom = 455.0
texture_normal = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="level2" type="TextureButton" parent="TextureRect"]
margin_left = 558.0
margin_top = 188.0
margin_right = 918.0
margin_bottom = 455.0
texture_normal = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="click_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="background_music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )

[node name="VideoPlayer" type="VideoPlayer" parent="."]
margin_top = -98.0
margin_right = 1017.0
margin_bottom = 714.0
stream = ExtResource( 7 )
volume_db = -64.79
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="TextureRect/level1" to="." method="_on_level1_pressed"]
[connection signal="pressed" from="TextureRect/level2" to="." method="_on_level2_pressed"]
